# agentic-document-intelligence-platform

./: .dockerignore  .dvcignore  .env.example  .gitignore  README.md  dvc.yaml  params.yaml  pyproject.toml  render.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml
ci/: eval_thresholds.json
config/: model_profiles.yaml
data/eval/: SOURCES.md  golden_qa.jsonl  paraphrase_probes.jsonl
data/eval/raw/: adam_optimizer.md  bert.md  eu_ai_act_risk_tiers.md  gdpr_art17_erasure.md  gdpr_art33_breach.md  gdpr_art5_principles.md  nist_ai_rmf_functions.md  nist_csf_functions.md  nist_zero_trust.md  resnet.md  rfc1035_dns.md  rfc2119_keywords.md  rfc8446_tls13.md  rfc9110_http_methods.md  rfc9110_status_codes.md  sec_diversification.md  sec_form_10k.md  sec_mutual_funds.md  transformer_attention.md
data/monitoring/: agent_smoke_metrics.json  ingestion_metrics.json  llmops_smoke_metrics.json  rag_eval_metrics.json
data/raw/: Deep Learning Assisted Differential Cryptanalysis for the Lightweight Cipher SIMON.md  academic_rag_evaluation.md  agentops_trace_runbook.md  finance_risk_report.md  hard_negative_agentops_terms.md  hard_negative_llmops_terms.md  hard_negative_model_roles.md  legal_policy_brief.md  llmops_prompt_registry.md  sample_research_note.md  technical_deployment_runbook.md
data/reference/: golden_qa.jsonl  offline_eval_snapshot.json
docs/: API.md  API_KEYS.md  CICD.md  DEEPSEEK14B_LOCAL_SMOKE.md  DEPLOY.md  DESIGN.md  DOCKER_DEMO.md  EVALUATION_DATASET.md  FINETUNING.md  FIXES.md  INTERVIEW_GUIDE.md  LLMOPS.md  MLOPS.md  MODEL_PROFILES.md  OPS_PIPELINES.md  QWEN3_LOCAL_SMOKE.md  ROADMAP.md  SERVING.md  STUDY_GUIDE.md  TOPICS_TO_LEARN.md
infra/docker/: Dockerfile  docker-compose.yml  entrypoint.sh  requirements.lock.txt
prompts/: brief_v1.txt  judge_v1.txt  plan_v1.txt  qa_v1.txt  rewrite_v1.txt  verify_v1.txt
src/adip/: README.md  __init__.py
tests/: conftest.py  test_agents.py  test_api.py  test_eval_gate.py  test_finetuning.py  test_ingestion.py  test_llmops.py  test_mlops.py  test_model_profiles.py  test_monitoring.py  test_rag.py  test_serving.py
(+79 files in other folders)
